# parallel-computation

./: CMakeLists.txt
src/extra/client/: CMakeLists.txt  main.cpp
src/extra/server/: float-buffer.ts  index.ts  package.json  pnpm-lock.yaml  round.ts
src/lab1/: CMakeLists.txt  display-data.ipynb  main.cpp  stats.csv
src/lab2/: CMakeLists.txt  TaskStatus.h  ThreadPool.h  main.cpp
src/lab3/: CMakeLists.txt  display-data.ipynb  main.cpp  stats.csv
src/lab4/: CMakeLists.txt
src/lab4/client/: constants.ts  enums.ts  handlers.ts  helpers.ts  index.ts  package.json  requests.ts  tsconfig.json
src/lab4/server/: TcpConnection.cpp  TcpConnection.h  TcpServer.h  helpers.cpp  helpers.h  main.cpp
src/utils/: Timer.hpp
